--- a/src/app/Components/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/Components/pensamentos/pensamento/pensamento.component.html
@@ -1,13 +1,13 @@
 <div class="pensamento {{ pensamento.modelo }} ff-roboto-mono pensamento-p">
-  <img src="src/assets/Imagens/{{ pensamento.modelo }}.png" alt="Aspas coloridas">
+  <img src="/assets/Imagens/{{ pensamento.modelo }}.png" alt="Aspas coloridas">
   <p class="conteudo"><b>{{ pensamento.conteudo }}</b></p>
   <p class="autorio"><small><i>{{ pensamento.autoria }}</i></small></p>
   <div class="acoes">
     <button class="botao-editar">
-      <img src="../../../../assets/Imagens/icone-editar.png" alt="Ícone de editar">
+      <img src="/assets/Imagens/icone-editar.png" alt="Ícone de editar">
     </button>
     <button class="botao-excluir">
-      <img src="../../../../assets/Imagens/icone-excluir.png" alt="">
+      <img src="/assets/Imagens/icone-excluir.png" alt="Ícone de excluir">
     </button>
   </div>
 </div>
